@@ -1,6 +1,8 @@
 2007-08-26  Badlop  <badlop@ono.com>
 
-	* src/mod_webpresence.erl: Renamed mod_presence.erl to mod_webpresence.erl. Updated table format. XForm support for Hash and JID URLs.
+	* README.txt: Document 'jid' and 'hash' type of URIs.
+
+	* src/mod_webpresence.erl: Renamed mod_presence.erl to mod_webpresence.erl. Updated table format. XForm support for Hash and JID URLs. Added complete support for 'jid' and 'hash' URIs.
 
 	* Emakefile: Idem.
 	* README.txt: Idem.
